descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2014-XX-XX  Release 7.26.XX                                    ---
----------------------------------------------------------------------

* added -L draw cmd option to draw bboxes for large bots - Cliff Yapp
* minor rtwizard graphical user interface reorganization - Cliff Yapp
* ported 'brlman' manual page viewer with GUI to Windows - Cliff Yapp
* added gdiff -h help command-line option - Cliff Yapp
* added facetize -m marching cubes option - Erik Greenwald
* removed -I interactive option from rt/rtedge/remrt - Sean Morrison
* improved pix-bw intensity averaging to closest integer - Cliff Yapp
* removed pix-bw3 & bw3-pix tools, see pix-bw & bw-pix - Cliff Yapp
* fixed pix-ppm to write out all image data - Sean Morrision
* added new algorithm to bot_decimate (via -f option) - Jon Engbert
* fixed benchmark bug running from paths with spaces - Sean Morrison
* removed support for RLE v1 and v2 ('orle') image format - Cliff Yapp
* fixed datum type 'in' command unit conversion bug - Cliff Yapp
* fixed rpatch / patch-g line handling on Windows - Daniel Roßberg
* added 'arb8' surface area value to analyze command - Kalpit Thakkar
* added 'part' centroid reporting to analyze command - Brad Hollister
* added new pixcrop utility for cropping pix images - Carl Moore
* preliminary OpenCL-accelerated coherent ray tracing pipeline
	- Jon Engbert, Vasco Costa
* improved point cloud plot visualization - Sean Morrison
* fixed program freezing bug in MGED grouper command - Bob Parker
* improved help option consistency across numerous tools - Carl Moore
* added prefatory FASTGEN4 geometry export support - Jon Engbert
* improved option parsing and output options for gencolor - Carl Moore
* fixed composition bugs in pixmatte and pixmerge - Carl Moore